--- a/FireSafety/src/app/app.html
+++ b/FireSafety/src/app/app.html
@@ -36,6 +36,7 @@
         <li>Fire Alarm Systems</li>
         <li>Smoke & Heat Detectors</li>
         <li>Sprinkler Systems</li>
+        <li>Fire Hydrant Systems</li>
       </ul>
     </div>
     
