--- a/FireSafety/src/app/contact.component.html
+++ b/FireSafety/src/app/contact.component.html
@@ -28,9 +28,9 @@
           </select>
         </div>
         <div class="form-group">
-          <textarea name="message" [(ngModel)]="formData.message" placeholder="Your Message" rows="5" required></textarea>
+          <textarea name="message" [(ngModel)]="formData.message" placeholder="Your Message (Optional)" rows="5"></textarea>
         </div>
-        <button type="submit" class="submit-btn" >Send Message</button>
+        <button type="submit" class="submit-btn">Send Message</button>
       </form>
     </div>
     
@@ -61,7 +61,7 @@
   <div class="map-section">
     <h3>Find Us Here</h3>
     <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3825.494788083616!2d80.6411!3d16.5011!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a35faba97534989%3A0xe90f9942c86943b2!2sBunder%20Rd%2C%20Vijayawada%2C%20Andhra%20Pradesh%20520010!5e0!3m2!1sen!2sin!4v1769669310309!5m2!1sen!2sin"
+      src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3800.0330046145036!2d83.23124317517312!3d17.74308398320604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTfCsDQ0JzM1LjEiTiA4M8KwMTQnMDEuOCJF!5e0!3m2!1sen!2sin!4v1770552359926!5m2!1sen!2sin"
       width="100%" 
       height="350" 
       style="border:0;border-radius:12px;" 
